
   * Help topics can now be loaded from files. 
     (Ian Clatworthy, Alexander Belchenko)

   * get_parent_map now always provides tuples as its output.  (Aaron Bentley)

   * New method ``iter_inventories`` on Repository for access to many
     inventories. This is primarily used by the ``revision_trees`` method, as
     direct access to inventories is discouraged. (Robert Collins)

   * Parent Providers should now implement ``get_parent_map`` returning a
     dictionary instead of ``get_parents`` returning a list.
     ``Graph.get_parents`` is now deprecated. (John Arbash Meinel,
     Robert Collins)

   * Patience Diff now supports arbitrary python objects, as long as they
     support ``hash()``. (John Arbash Meinel)

   * Reduce selftest overhead to establish test names by memoization.
     (Vincent Ladeuil)

   * Repository has a new method ``has_revisions`` which signals the presence
     of many revisions by returning a set of the revisions listed which are
     present. This can be done by index queries without reading data for parent
     revision names etc. (Robert Collins)

  API BREAKS:

  TESTING:

   * Modules can now customise their tests by defining a ``load_tests``
     attribute. ``pydoc bzrlib.tests.TestUtil.TestLoader.loadTestsFromModule``
     for the documentation on this attribute. (Robert Collins)

   * New helper function ``bzrlib.tests.condition_id_re`` which helps
     filter tests based on a regular expression search on the tests id.
     (Robert Collins)
    
   * New helper function ``bzrlib.tests.condition_isinstance`` which helps
     filter tests based on class. (Robert Collins)
    
   * New helper function ``bzrlib.tests.exclude_suite_by_condition`` which
     generalises the ``exclude_suite_by_re`` function. (Robert Collins)

   * New helper function ``bzrlib.tests.filter_suite_by_condition`` which
     generalises the ``filter_suite_by_re`` function. (Robert Collins)
